PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.3.14

- GD:
  . Fixed bug #78923 (Artifacts when convoluting image with transparency).
    (wilson chen)

19 Dec 2019, PHP 7.3.13

- Core:
  . Fixed bug #78787 (Segfault with trait overriding inherited private shadow
    property). (Nikita)
  . Fixed bug #78868 (Calling __autoload() with incorrect EG(fake_scope) value).
    (Antony Dovgal, Dmitry)
  . Fixed bug #78296 (is_file fails to detect file). (cmb)

- GD:
  . Fixed bug #78849 (GD build broken with -D SIGNED_COMPARE_SLOW). (cmb)

- MBString:
  . Upgraded bundled Oniguruma to 6.9.4. (cmb)

- OPcache:
  . Fixed potential ASLR related invalid opline handler issues. (cmb)
  . Fixed $x = (bool)$x; with opcache (should emit undeclared variable notice).
    (Tyson Andre)

- PCRE:
  . Fixed bug #78853 (preg_match() may return integer > 1). (cmb)

- Standard:
  . Fixed bug #78759 (array_search in $GLOBALS). (Nikita)
  . Fixed bug #77638 (var_export'ing certain class instances segfaults). (cmb)
  . Fixed bug #78840 (imploding $GLOBALS crashes). (cmb)
  . Fixed bug #78833 (Integer overflow in pack causes out-of-bound access).
    (cmb)
  . Fixed bug #78814 (strip_tags allows / in tag name => whitelist bypass).
    (cmb)

21 Nov 2019, PHP 7.3.12

- Core:
  . Fixed bug #78658 (Memory corruption using Closure::bindTo). (Nikita)
  . Fixed bug #78656 (Parse errors classified as highest log-level). (Erik
    Lundin)
  . Fixed bug #78752 (Segfault if GC triggered while generator stack frame is
    being destroyed). (Nikita)
  . Fixed bug #78689 (Closure::fromCallable() doesn't handle
    [Closure, '__invoke']). (Nikita)

- COM:
  . Fixed bug #78694 (Appending to a variant array causes segfault). (cmb)

- Date:
  . Fixed bug #70153 (\DateInterval incorrectly unserialized). (Maksim Iakunin)