@@ -169,6 +169,7 @@ struct _php_curl_send_headers {
 struct _php_curl_free {
 	zend_llist str;
 	zend_llist post;
+	zend_llist stream;
 	HashTable *slist;
 };
 
